# ssync

./: .gitignore  AGENTS.md  CHANGELOG  CHANGELOG.md  CLI_ANALYSIS_REPORT.md  CODEBASE_ANALYSIS.md  Cargo.toml  Cross.toml  EXPLORATION_COMPLETE.md  FILE_CONTENTS_REFERENCE.md  LICENSE  README.md  README_ANALYSIS.md  ssync-project-outline.md  temp
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: openssh-migration-evaluation.md  russh-migration-evaluation.md  tui_reconstruct_plan.md
docs/adr/: ssh-auth-tui-popup.md
docs/superpowers/plans/: 2026-03-12-sync-pipeline-optimization.md  2026-03-19-init-host-key-acceptance.md  2026-03-19-init-summary-version-plan.md  2026-03-21-windows-client-compat.md  2026-04-14-ssh-transport-trait.md  2026-04-27-russh-migration.md  2026-04-28-sync-auto-directory-detection.md  2026-04-29-cli-filter-output-refactor.md  2026-05-06-tui-nav-and-bugfix.md  2026-05-07-tui-ux-fixes.md
docs/superpowers/specs/: 2026-03-12-sync-pipeline-optimization-design.md  2026-03-19-init-host-key-acceptance-design.md  2026-03-19-init-summary-version-design.md  2026-03-21-windows-client-compat-design.md  2026-04-14-ssh-transport-trait-design.md  2026-04-27-russh-migration-design.md  2026-04-28-sync-auto-directory-detection-design.md  2026-04-29-cli-filter-output-refactor-design.md
src/: cli.rs  main.rs
src/commands/: check.rs  checkout.rs  config.rs  exec.rs  init.rs  list.rs  log.rs  mod.rs  report.rs  run.rs  sync.rs
src/config/: app.rs  mod.rs  schema.rs  ssh_config.rs
src/host/: auth.rs  concurrency.rs  connection.rs  executor.rs  filter.rs  mod.rs  pool.rs  process_transport.rs  session_pool.rs  sftp.rs  shell.rs  transport.rs
src/metrics/: collector.rs  mod.rs  parser.rs
src/metrics/probes/: cmd.rs  mod.rs  powershell.rs  sh.rs
src/output/: mod.rs  printer.rs  progress.rs  report.rs  summary.rs
src/state/: db.rs  mod.rs  retention.rs
src/state/migrations/: 001_init.sql
src/tui/: app.rs  async_bridge.rs  entry.rs  event.rs  focus.rs  log_layer.rs  mod.rs  terminal.rs  theme.rs
src/tui/components/: input_field.rs  mod.rs  popup.rs  target_filter.rs  viewport.rs
src/tui/state/: persist.rs
src/tui/tabs/: config_tab.rs  mod.rs  operate_tab.rs
