[package]
name = "ssync"
version = "0.4.0"
edition = "2021"
description = "SSH-config-based cross-platform remote management tool"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "process", "time", "macros", "sync", "io-util", "fs"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Hashing
blake3 = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Output
indicatif = "0.17"

# TUI
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Cross-platform paths
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Temp files
tempfile = "3"

# JSON
serde_json = "1"

[features]
default = ["tui"]
tui = ["ratatui", "crossterm"]
