[package]
name = "ssync"
version = "0.9.0"
edition = "2021"
description = "SSH-config-based cross-platform remote management tool"

[[bin]]
name = "ssync"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "process", "time", "macros", "sync", "io-util", "fs", "signal"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"

# Password input
rpassword = "7"

# Credential zeroization
zeroize = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Hashing
blake3 = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# SSH (russh migration)
russh = "0.44"
russh-keys = "0.44"
russh-sftp = "2.1"

# Output
indicatif = "0.17"

# TUI
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
tokio-util = { version = "0.7", optional = true }

# Cross-platform paths
dirs = "5"

# Current user info
whoami = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Temp files
tempfile = "3"

# JSON
serde_json = "1"

# Unicode display width (terminal column counting)
unicode-width = "0.1"

[features]
default = ["tui"]
tui = ["ratatui", "crossterm", "tokio-util"]
